--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,12 @@
 
   <body class="sans-serif antialiased debug {% if page.title == 'Dripline' %} dripline-and-lines {% elsif page.title == 'Work' %} network-and-lines {% elsif page.title == 'People' %} mushroom-and-lines {% elsif page.title == 'Home' %} root-and-lines {% elsif page.title == 'Co-Creation Lab' %} c-lab-and-lines {% else %} footer {% endif %}">
     <a href="#maincontent" class="skip-link absolute top-0 left-0 z-max pa2">Skip to main content</a>
-    {%- include sections.html tag="header" path="header.html" class="pt4 flex items-baseline mw9 center justify-between" -%}
-    <main id="maincontent" class="mw9 center">
+    {%- include sections.html tag="header" path="header.html" class="pt4 flex items-baseline mw9 center justify-between" role="banner" -%}
+    <main id="maincontent" class="mw9 center" role="main">
       {{ content }}
     </main>
 
-    {%- include sections.html tag="footer" path="footer.html" class="mw9 center mv5" -%}
+    {%- include sections.html tag="footer" path="footer.html" class="mw9 center mv5" role="contentinfo" -%}
 
   </body>
 </html>
