enhance footer accessibility by updating ARIA roles and adding a heading for policies

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -34,7 +34,8 @@
           </a></li>
         </ul>
       </nav>
-      <div role="contentinfo">
+      <div role="region" aria-labelledby="policies-heading">
+        <h2 id="policies-heading" class="dn">Policies and Licensing Information</h2>
         <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a
             href="https://handbook.hypha.coop/Policies/data.html" target="_blank" class="accent link underline-hover"
             rel="noopener">How We Use Data</a> and <a href="https://handbook.hypha.coop/Policies/working-open.html"
