Add newsletter subscription link to footer

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -32,6 +32,10 @@
             rel="noopener" aria-label="Read our handbook">
             Handbook
           </a></li>
+          <li class="pr3"><a href="{{ site.newsletter }}" class="accent link underline-hover" target="_blank"
+            rel="noopener" aria-label="Subscribe to our newsletter">
+            Newsletter
+          </a></li>
         </ul>
       </nav>
       <div role="region" aria-labelledby="policies-heading">
