a11y: visual distinction on links

--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -12,4 +12,4 @@
 </div>
 
 
-<a href="#menu" aria-label="Open menu" class="dn-l f4 f3-ns link underline-hover accent sans-serif">Menu</a>
+<a href="#menu" aria-label="Open menu" class="dn-l f4 f3-ns no-underline underline-hover accent sans-serif">Menu</a>
