--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -19,7 +19,7 @@
       <div class="measure w-33-m w-33-l w100 pr3 pl3 mb3">
         <a class="no-underline" href="{{ opening.url | relative_url }}">
           <h4
-            class="f3 mt0 mb2 sans-serif normal accent link underline-hover lh-title"
+            class="f3 mt0 mb2 sans-serif normal accent link lh-title"
           >
             {{ opening.title }}
           </h4>
