--- a/_includes/sections/team-bios.html
+++ b/_includes/sections/team-bios.html
@@ -23,7 +23,7 @@
         {{ person.excerpt | markdownify }}
       </div>
       {% unless person.excerpt == person.content %}
-        <p class="mv0 link accent pointer underline-hover w-fit"
+        <p class="mv0 link accent pointer w-fit"
            tabindex="0"
            role="button"
            aria-expanded="false"
