--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -10,7 +10,7 @@
       <dt class="mb3 mt0 f3"><strong>Telephone</strong></dt>
       <dd class="ml0">
         <a
-          class="accent f3 link underline-hover"
+          class="accent f3 link"
           href="tel:{{ site.phone | | remove: ' ' | remove: '-' }}"
           >{{ site.phone }}</a
         >
@@ -20,7 +20,7 @@
       <dt class="mb3 mt0 f3"><strong>Email</strong></dt>
       <dd class="ml0">
         <a
-          class="accent f3 link underline-hover"
+          class="accent f3 link"
           href="mailto:{{ site.email-hidden }}"
           >{{ site.email }}</a
         >
