--- a/_layouts/openings/opening.html
+++ b/_layouts/openings/opening.html
@@ -4,13 +4,13 @@ layout: default
 
 <section id="opening" class="mt4 ph3 ph5-l ">
   <div class="mb4">
-    <a class="sans-serif link underline-hover accent" title="Return to Openings" href="/people#openings">← Openings</a>
+    <a class="sans-serif link accent" title="Return to Openings" href="/people#openings">← Openings</a>
   </div>
   <header class="mb4">
     <h1 class="f1 f-subheadline-l sans-serif lh-solid mb3 mt0-l">{{ page.title }}</h1>
   </header>
-  <div class="lh-copy mw7 links-accent links-underline-hover">{{ content }}</div>
+  <div class="lh-copy mw7 links-accent">{{ content }}</div>
   <footer class="mt5 bt bw2 b--light-gray">
-    <p><a class="sans-serif link underline-hover accent" title="Return to Openings" href="/people#openings">Openings</a></p>
+    <p><a class="sans-serif link accent" title="Return to Openings" href="/people#openings">Openings</a></p>
   </footer>
 </section>
