--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -4,23 +4,23 @@
     <div class="w-100 w-50-l pr5">
       <nav aria-label="Social media links">
         <ul class="list pl0 flex flex-wrap f5 f4-l items-center">
-          <li class="pr3 pr4-ns mb3"><a href="{{ site.github }}" class="accent link underline-hover" target="_blank"
+          <li class="pr3 pr4-ns mb3"><a href="{{ site.github }}" class="accent link" target="_blank"
               rel="noopener" aria-label="Visit our GitHub profile">
               <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/github_logo.svg" alt="GitHub">
             </a></li>
-          <li class="pr3 pr4-ns mb3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank"
+          <li class="pr3 pr4-ns mb3"><a href="{{ site.linkedin }}" class="accent link" target="_blank"
               rel="noopener" data-proofer-ignore aria-label="Visit our LinkedIn profile">
               <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/linkedin_logo.svg" alt="LinkedIn">
             </a></li>
-          <li class="pr3 pr4-ns mb3"><a href="{{ site.bluesky }}" class="accent link underline-hover" target="_blank"
+          <li class="pr3 pr4-ns mb3"><a href="{{ site.bluesky }}" class="accent link" target="_blank"
               rel="noopener" data-proofer-ignore aria-label="Visit our Bluesky profile">
               <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/bluesky_logo.svg" alt="Bluesky">
             </a></li>
-          <li class="pr3 pr4-ns mb3"><a href="{{ site.mastodon }}" class="accent link underline-hover" target="_blank"
+          <li class="pr3 pr4-ns mb3"><a href="{{ site.mastodon }}" class="accent link" target="_blank"
               rel="noopener me" aria-label="Visit our Mastodon profile">
               <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/mastodon_logo.svg" alt="Mastodon">
             </a></li>
-          <li class="pr3 pr4-ns mb3"><a href="{{ site.url }}{{ site.rss }}" class="accent link underline-hover"
+          <li class="pr3 pr4-ns mb3"><a href="{{ site.url }}{{ site.rss }}" class="accent link"
               target="_blank" rel="noopener" aria-label="Subscribe to our RSS feed">
               <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/rss_logo.svg" alt="RSS">
             </a></li>
@@ -28,11 +28,11 @@
       </nav>
       <nav aria-label="Footer links">
         <ul class="list pl0 flex flex-wrap f5 f4-l items-center">
-          <li class="pr3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank"
+          <li class="pr3"><a href="{{ site.handbook }}" class="accent link" target="_blank"
             rel="noopener" aria-label="Read our handbook">
             Handbook
           </a></li>
-          <li class="pr3"><a href="{{ site.newsletter }}" class="accent link underline-hover" target="_blank"
+          <li class="pr3"><a href="{{ site.newsletter }}" class="accent link" target="_blank"
             rel="noopener" aria-label="Subscribe to our newsletter">
             Newsletter
           </a></li>
@@ -41,20 +41,20 @@
       <div role="region" aria-labelledby="policies-heading">
         <h2 id="policies-heading" class="dn">Policies and Licensing Information</h2>
         <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a
-            href="https://handbook.hypha.coop/Policies/data.html" target="_blank" class="accent link underline-hover"
+            href="https://handbook.hypha.coop/Policies/data.html" target="_blank" class="accent link"
             rel="noopener">How We Use Data</a> and <a href="https://handbook.hypha.coop/Policies/working-open.html"
-            target="_blank" class="accent link underline-hover" rel="noopener">Working Open</a>.</p>
+            target="_blank" class="accent link" rel="noopener">Working Open</a>.</p>
         <p class="f6 f5-l lh-copy">
           This site is published using <a href="https://distributed.press/" target="_blank"
-            class="accent link underline-hover" rel="noopener">Distributed Press</a>.
+            class="accent link" rel="noopener">Distributed Press</a>.
           You can <a href="https://github.com/hyphacoop/api.distributed.press" target="_blank"
-            class="accent link underline-hover" rel="noopener">use it to publish</a> on the p2p and distributed web too.
+            class="accent link" rel="noopener">use it to publish</a> on the p2p and distributed web too.
           Distributed Web:
-          <a href="https://ipfs.distributed.press/ipns/hypha.coop{{ page.url }}" class="accent link underline-hover"
+          <a href="https://ipfs.distributed.press/ipns/hypha.coop{{ page.url }}" class="accent link"
             data-proofer-ignore>ipns://hypha.coop</a>
         </p>
         <p class="f6 f5-l lh-copy">This website content is licensed under a <a
-            href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" class="accent link underline-hover"
+            href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" class="accent link"
             rel="noopener">Creative Commons Attribution-ShareAlike 4.0 International</a> license.</p>
       </div>
     </div>
