--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -3,7 +3,7 @@
       <h2>What we do</h2>
     <p class="lh-copy f3 measure mt0">
       We’re a diverse team of expert creatives, builders, and organizers who collaborate closely with clients to advance their missions through tech. Read more about
-      <a class="accent link underline-hover" href="/work/">our work</a>  across Hypha's three practice areas.
+      <a class="accent link" href="/work/">our work</a>  across Hypha's three practice areas.
     </p>
   </div>
 </div>
@@ -11,22 +11,15 @@
   {% assign sorted_elements = page.what_we_do | sort: 'order' %}
   {% for element in sorted_elements %}
     <div class="w-30-l measure flex-column justify-left items-left tl pr4">
-      {% if element.slug %}
-        <a href="/{{ element.slug }}/" class="underline-hover">
-      {% endif %}
       <h2 class="f2 accent mb1">
         {{ element.title }}
       </h2>
-      {% if element.slug %}
-        </a>
-      {% endif %}
       <p class="pb3 f3 lh-copy">
         {{ element.description }}
       
         {% if element.slug %}
-          <a href="/{{ element.slug }}/" class="accent link underline-hover">Read more</a>.
+          <a href="/{{ element.slug }}/" class="accent link">Read more</a>.
         {% endif %}
-
       </p>
     </div>
   {% endfor %}
