--- a/_layouts/dripline/post.html
+++ b/_layouts/dripline/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <section class="mt4 ph3 ph5-l">
   <div class="mb4 mt5">
-    <a class="sans-serif link underline-hover accent" title="Return to Dripline" href="{% link dripline.html %}">← Dripline</a>
+    <a class="sans-serif link accent" title="Return to Dripline" href="{% link dripline.html %}">← Dripline</a>
   </div>
   <header class="mt5 mb6 mw8 center">
     <h1 class="f1-ns f2 sans-serif lh-solid mb3 mt0-l">{{ page.title }}</h1>
@@ -12,7 +12,7 @@ layout: default
     <p><strong>{{ page.author | upcase }}</strong></p>
     {% endif %}
     <h3 class="gray f6 f5-l lh-solid mt0">{{ page.date | date: site.date_format }}</h3>
-    <div class="lh-copy mw7 mb4 links-accent links-underline-hover">
+    <div class="lh-copy mw7 mb4 links-accent">
       {% if page.acknowledgement != "" or page.acknowledgement != nil %}
       <div><em>{{ page.acknowledgement | markdownify }}</em></div>
       {% endif %}
@@ -29,6 +29,6 @@ layout: default
     {% include activity_pub/interactions.html activity=page.activity profile=site.actor %}
   {% endif %}
   <footer class="mt5 bt bw2 b--light-gray">
-    <p><a class="link accent underline-hover" href="{% link dripline.html %}">← <span class="gray">Return to Dripline</span></a></p>
+    <p><a class="link accent" href="{% link dripline.html %}">← <span class="gray">Return to Dripline</span></a></p>
   </footer>
 </section>
