move newsletter down on the homepage and adjust styles

--- a/_includes/sections/newsletter.html
+++ b/_includes/sections/newsletter.html
@@ -1,16 +1,16 @@
 <div class="flex-l items-center mv2">
     <div class="w-100-l mt4 mt5-l cover">
-        <h2 class="w-90 w-80-ns fw4 f2 f1-l">
+        <h2 class="f1 f-subheadline-l sans-serif accent">
             Beyond the Dripline
         </h2>
         <div class="flex-l items-center mt3 mt4-l">
             <div class="w-100 w-two-thirds-l pr4-l">
-                <div class="f3 f2-l measure dark-gray lh-copy">
+                <h3 class="f3 f3-l normal lh-solid measure  sans-serif">
                     Our 
                     <a href="https://newsletter.hypha.coop/" target="_blank" rel="noopener">
                         newsletter</a>
                      where we cultivate stories about co-operative technologies
-                </div>
+                    </h3>
             </div>
             <div class="w-100 w-third-l mt3 mt0-l">
                 <div style="min-height: 58px;max-width: 440px;margin: 0;width: 100%">
