adjust margin classes for consistency

--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,4 +1,4 @@
-<div class="measure-m mt6-ns mt5 mb4 mr5-l">
+<div class="measure-m mt5 mb4 mr5-l">
   <h2 class="f1 f-subheadline-l sans-serif mt0 accent">Technology you can believe in</h2>
   </div>
 
