--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,4 +1,4 @@
-<div class="flex justify-between flex-nowrap-ns flex-wrap  mt6-ns mt5 mb4 mr5-l">
+<div class="flex justify-between flex-nowrap-ns flex-wrap mt5 mb5 mr5-l">
     <div class="flex flex-column measure-wide-l measure-m">
       <h2>
         Co-operation is our DNA
