--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -1,4 +1,4 @@
-<div class="flex-l mt6-ns mt5 mb6-ns mb4">
+<div class="flex-l mt5 mb6-ns mb4">
   <div class="w-75-l">
     <h2 class="f1 f-subheadline-l sans-serif accent">Work with us</h2>
 
