--- a/_includes/sections/newsletter.html
+++ b/_includes/sections/newsletter.html
@@ -1,18 +1,18 @@
 <div class="flex-l items-center mv2">
-    <div class="w-100-l mt4 mt5-l cover">
-        <h2 class="f1 f-subheadline-l sans-serif accent">
+    <div class="w-100-l mt5 cover">
+        <h2>
             Beyond the Dripline
         </h2>
-        <div class="flex-l items-center mt3 mt4-l">
-            <div class="w-100 w-two-thirds-l pr4-l">
-                <h3 class="f3 f3-l normal lh-solid measure  sans-serif">
+        <div class="flex-l mt3 mt4-l justify-between items-end lh-copy">
+            <div class="w-100 measure-wide-l measure-m pr4-l mr5-l">
+                <p class="f3 f3-l normal lh-copy measure sans-serif">
                     Our 
                     <a href="https://newsletter.hypha.coop/" target="_blank" rel="noopener">
                         newsletter</a>
-                     where we cultivate stories about co-operative technologies
-                    </h3>
+                     where we cultivate stories about co-operative technologies.
+                </p>
             </div>
-            <div class="w-100 w-third-l mt3 mt0-l">
+            <div class="w-100 w-third-l mt3 mb4 mt0-l mr4-l">
                 <div style="min-height: 58px;max-width: 440px;margin: 0;width: 100%">
                     <script src="https://cdn.jsdelivr.net/ghost/signup-form@~0.2/umd/signup-form.min.js"
                         data-button-color="#9900FC" data-button-text-color="#FFFFFF"
