--- a/_includes/sections/our-services.html
+++ b/_includes/sections/our-services.html
@@ -1,4 +1,4 @@
-<div class="flex justify-start lh-copy f3 mt6-ns mt5 mb4">
+<div class="flex justify-start lh-copy f3 mt5 mb4">
   <div class="mr3">
     <h2>Our services</h2>
   <p class="lh-copy f3 measure mt0">
