update about section

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -13,11 +13,9 @@
         systems we use daily to manage our social and economic lives are locking
         us in and extracting value without giving back.
       </p>
-      <p class="f3 lh-copy mt0">
-        <strong>
-          Hypha operates at the intersection of these challenges.</strong
-        >
-      </p>
+      <h2 class="f2 fw6 mt5 mb3">
+        Hypha operates at the intersection of these challenges.
+      </h2>
       <p class="f3 lh-copy mt0">
         We build infrastructure that restores information integrity, enables
         verifiable computation, and unlocks new economic models.
