make dripline posts narrower

--- a/_layouts/dripline/post.html
+++ b/_layouts/dripline/post.html
@@ -18,7 +18,7 @@ layout: default
       {% endif %}
     </div>
   </header>
-  <article id="dripline" class="mw8 center">
+  <article id="dripline" class="read-width center">
     {{ content }}
   </article>
   {% if page.activity.inReplyTo %}
