--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -3,7 +3,7 @@
     <h2 class="w-90 w-70-ns fw4">
       Resilient digital systems. Built for the future we need.
     </h2>
-    <div class="measure-wide-l">
+    <div class="measure-wide">
       <p class="f3 lh-copy mt0">
         Reality is fragmenting. Generative AI is making it harder to know what's
         real, eroding the shared trust we need to function as a society.
