purple headers everywhere

--- a/_includes/sections/techniques.html
+++ b/_includes/sections/techniques.html
@@ -11,7 +11,7 @@
   {% assign techniques = page.techniques %}
   {% for technique in techniques %}
     <div class="w-third-l w-100 measure flex-column justify-left items-left tl pr4 mb4">
-      <h3 class="f3 accent mb2">{{ technique.title }}</h3>
+      <h3 class="f3 mb2">{{ technique.title }}</h3>
       <p class="pb3 f4 lh-copy">{{ technique.description }}</p>
     </div>
   {% endfor %}
