fix mroe things

--- a/_includes/sections/newsletter.html
+++ b/_includes/sections/newsletter.html
@@ -1,8 +1,6 @@
-<div class="flex-l items-center mv2">
+<div class="flex-l items-center mv2 newsletter-section">
     <div class="w-100-l mt4 mt5-l cover">
-        <h2 class="f1 f-subheadline-l sans-serif accent">
-            Beyond the Dripline
-        </h2>
+        <h2>Beyond the Dripline</h2>
         <div class="flex-l items-center mt3 mt4-l">
             <div class="w-100 w-two-thirds-l pr4-l">
                 <h3 class="f3 f3-l normal lh-solid measure  sans-serif">
