Finalize homepage layout: fix spacing, alignment, and footer

--- a/_includes/sections/case-studies.html
+++ b/_includes/sections/case-studies.html
@@ -1,5 +1,5 @@
-<div class="measure-wide mt5 mb4 mr5-l">
-  <h2 class="f2 fw6 mt0 mb4">We are an R&D partner for leaders in finance, culture, and technology.</h2>
+<div class="mt4 mt5-ns mb4 mr5-l">
+  <h2 class="f2 fw6 mt0 mb4 measure-wide">We are an R&D partner for leaders in finance, culture, and technology.</h2>
 </div>
 
 <div class="flex flex-wrap justify-between mb5">
