--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -1,28 +1,28 @@
 <footer role="contentinfo">
-  <p class="f3 f4-l fw7 lh-copy dark-gray">{{ site.footer }}</p>
-  <div class="flex-l items-baseline">
-    <div class="w-100 w-50-l pr5">
+
+  <div class="flex-l items-start">
+    <div class="w-100 w-50-l pr4-l">
       <nav aria-label="Social media links">
         <ul class="list pl0 flex flex-wrap f5 f4-l items-center">
           <li class="pr3 pr4-ns mb3"><a href="{{ site.github }}" class="accent link" target="_blank"
               rel="noopener" aria-label="Visit our GitHub profile">
-              <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/github_logo.svg" alt="GitHub">
+              <img class="w2-5 h2-5 grow-large" src="/assets/images/logos/footer/github_logo.svg" alt="GitHub">
             </a></li>
           <li class="pr3 pr4-ns mb3"><a href="{{ site.linkedin }}" class="accent link" target="_blank"
               rel="noopener" data-proofer-ignore aria-label="Visit our LinkedIn profile">
-              <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/linkedin_logo.svg" alt="LinkedIn">
+              <img class="w2-5 h2-5 grow-large" src="/assets/images/logos/footer/linkedin_logo.svg" alt="LinkedIn">
             </a></li>
           <li class="pr3 pr4-ns mb3"><a href="{{ site.bluesky }}" class="accent link" target="_blank"
               rel="noopener" data-proofer-ignore aria-label="Visit our Bluesky profile">
-              <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/bluesky_logo.svg" alt="Bluesky">
+              <img class="w2-5 h2-5 grow-large" src="/assets/images/logos/footer/bluesky_logo.svg" alt="Bluesky">
             </a></li>
           <li class="pr3 pr4-ns mb3"><a href="{{ site.mastodon }}" class="accent link" target="_blank"
               rel="noopener me" aria-label="Visit our Mastodon profile">
-              <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/mastodon_logo.svg" alt="Mastodon">
+              <img class="w2-5 h2-5 grow-large" src="/assets/images/logos/footer/mastodon_logo.svg" alt="Mastodon">
             </a></li>
           <li class="pr3 pr4-ns mb3"><a href="{{ site.url }}{{ site.rss }}" class="accent link"
               target="_blank" rel="noopener" aria-label="Subscribe to our RSS feed">
-              <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/rss_logo.svg" alt="RSS">
+              <img class="w2-5 h2-5 grow-large" src="/assets/images/logos/footer/rss_logo.svg" alt="RSS">
             </a></li>
         </ul>
       </nav>
@@ -60,7 +60,7 @@
     </div>
     <div class="w-100 w-50-l">
       <section aria-labelledby="land-acknowledgement">
-        <h3 id="land-acknowledgement" class="f4 normal"><span class="accent">⚑</span> Hypha is rooted in Tkaronto (Toronto), Canada.</h3>
+        <h3 id="land-acknowledgement" class="f4 normal mv4"><span class="accent">⚑</span> Hypha is rooted in Tkaronto (Toronto), Canada.</h3>
 
         <h4 class="f5 measure normal lh-copy gray">
           Hypha acknowledges the sacred land we work on is the territory of many nations and was the subject of the Dish
@@ -68,6 +68,7 @@
           Lakes. Today it is still home to many First Nations, Inuit, and Métis peoples from across Turtle Island.
         </h4>
       </section>
+      <p class="f3 f4-l fw7 lh-copy dark-gray">{{ site.footer }}</p>
     </div>
   </div>
 </footer>
