--- a/_includes/sections/newsletter.html
+++ b/_includes/sections/newsletter.html
@@ -1,5 +1,5 @@
-<div class="flex-l items-center mv2 newsletter-section">
-    <div class="w-100-l mt4 mt5-l cover">
+<div class="flex-l items-center mb5 mb6-ns mt5 mt6-ns newsletter-section">
+    <div class="w-100-l cover">
         <h2>Beyond the Dripline</h2>
         <div class="flex-l items-center mt3 mt4-l">
             <div class="w-100 w-two-thirds-l pr4-l">
