--- a/_includes/sections/techniques.html
+++ b/_includes/sections/techniques.html
@@ -1,6 +1,6 @@
 <div class="flex justify-start lh-copy mt6-ns mt5 mb4">
   <div class="mr3">
-    <h2 class="f2 fw6 mt0 mb3">Our toolkit</h2>
+    <h2>Our toolkit</h2>
     <p class="lh-copy f3 measure-wide mt0">
       Trust isn't a technical challenge: it's a human problem. We build digital systems people can rely on through community input, democratic processes, and shared ownership. But making those human agreements work at internet scale requires expert technical infrastructure. We specialize in:
     </p>
