--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,7 +1,7 @@
-<div class="flex justify-between flex-nowrap-ns flex-wrap mt6-ns mt5 mb4 mr5-l">
-    <div class="flex flex-column measure-wide-l measure-m">
+<div class="flex justify-between flex-nowrap-ns flex-wrap mt6-ns mt5 mb4">
+    <div class="flex flex-column justify-center measure-wide-l measure-m pr4-l">
       <h2>Our team</h2>
-      <p class="f3 fw6 mt0 mb3">Worker-owned. Employee-controlled.</p>
+      <p class="f3 fw6 mt0 mb3 accent">Worker-owned. Employee-controlled.</p>
       <p class="f3 lh-copy mt0">
         We're a cooperative because we believe it changes the equation: long-term relationships over quick wins, quality over moving fast and breaking things. We're driven by collaboration and community, and our shared values are reflected in the approach we bring to each project.
       </p>
@@ -10,7 +10,7 @@
       </p>
     </div>
     <div class="w-100 w-50-ns">
-        <img class="mw-100" src="/assets/images/block2.png" alt="mushrooms growing out of a computer chip"/>
+        <img class="mw-100" src="/assets/images/block2.png" alt="mushrooms growing out of a computer chip" loading="lazy"/>
     </div>
 </div>
 
