--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
       {{ content }}
     </main>
 
-    {%- include sections.html tag="footer" path="footer.html" class="mw9 center mv5" role="contentinfo" -%}
+    {%- include sections.html tag="footer" path="footer.html" class="mw9 center mt5 mt6-ns" role="contentinfo" -%}
 
   </body>
 </html>
