--- a/_layouts/practice_area.html
+++ b/_layouts/practice_area.html
@@ -69,7 +69,7 @@
         </div>
       </section>
       </main>
-      {%- include sections.html tag="footer" path="footer.html" class="mw9 center mv5" -%}
+      {%- include sections.html tag="footer" path="footer.html" class="mw9 center mt5" -%}
     </body>
 </html>
       
