--- a/_layouts/dripline/post.html
+++ b/_layouts/dripline/post.html
@@ -6,8 +6,11 @@ layout: default
   <div class="mb4 mt5">
     <a class="sans-serif link accent" title="Return to Dripline" href="{% link dripline.html %}">← Dripline</a>
   </div>
-  <header class="mt5 mb6 mw8 center">
+  <header class="mt5 mb5 mw8 center">
     <h1 class="f1-ns f2 sans-serif lh-solid mb3 mt0-l">{{ page.title }}</h1>
+    {% if page.excerpt %}
+    <h3 class="measure">{{ page.excerpt }}</h3>
+    {% endif %}
     {% if page.author != "" or page.author != nil %}
     <p><strong>{{ page.author | upcase }}</strong></p>
     {% endif %}
@@ -19,9 +22,6 @@ layout: default
     </div>
   </header>
   <article id="dripline" class="mw8 center">
-    {% if page.excerpt %}
-    <h3>{{ page.excerpt }}</h3>
-    {% endif %}
     {{ content }}
   </article>
   {% if page.activity.inReplyTo %}
