--- a/_layouts/dripline/post.html
+++ b/_layouts/dripline/post.html
@@ -9,7 +9,7 @@ layout: default
   <header class="read-width mt5 mb5 center">
     <h1 class="f1-ns f2 sans-serif lh-solid mb3 mt0-l">{{ page.title }}</h1>
     {% if page.excerpt %}
-    <div class="f3 fw4 measure black">{{ page.excerpt | markdownify }}</div>
+    <h2 class="f3 fw4 measure black">{{ page.excerpt | markdownify }}</h2>
     {% endif %}
     {% if page.author != "" or page.author != nil %}
     <p><strong>{{ page.author | upcase }}</strong></p>
